@@ -1,5 +1,14 @@
 2008-05-03  Sam Weinig  <sam@webkit.org>
 
+        Reviewed by Mark Rowe.
+
+        Remove unused enums from JSDOMWindowBase.
+
+        * bindings/js/JSDOMWindowBase.h:
+        (WebCore::JSDOMWindowBase::):
+
+2008-05-03  Sam Weinig  <sam@webkit.org>
+
         Real build fix.
 
         * WebCore.xcodeproj/project.pbxproj:
